# gaia

./: '  Cargo.toml
examples/: simple.rs
src/: byte_utils.rs  lib.rs  packet.rs  sender.rs  traits.rs  transport.rs  vendor_id.rs
src/transport/: bluez.rs  common.rs  uuids.rs
src/v2/: command.rs  input.rs  mod.rs  request.rs  response.rs  status.rs  version.rs
src/v3/: error.rs  feature.rs  mod.rs  notification.rs  packet.rs  packet_type.rs  request.rs  response.rs  status.rs
src/v3/packets/: anc.rs  basic.rs  earbud.rs  macros.rs  mod.rs
src/v3/packets/anc/: earbud_position.rs  notification.rs  packet.rs  request.rs  response.rs
src/v3/packets/basic/: command.rs  notification.rs  request.rs  response.rs  transfer_data.rs  transport_info.rs
src/v3/packets/earbud/: anc.rs  cardle_status.rs  charging_status.rs  command.rs  fw_version.rs  notification.rs  peer_state.rs  request.rs  response.rs  serial_number.rs
