[package]
name = "gaia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.13.3" }
tokio = { version = "1.17.0", features = ["full"] }
futures = { version = "0.3.21" }
bitflags = { version = "1.3.2" }
async-trait = { version = "0.1.52" }
tracing = { version = "0.1.31" }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
num_enum = { version = "0.5.7" }
byteorder = { version = "1.4.3" }
hex = "0.4.3"
dashmap = { version = "5.1.0" }
kiam = "0.1.1"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = { version = "1.0.30" }
